gke-fleets-with-argocd/argo-repo-sync/app-clusters-config/asm-gateways/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asm-ingressgateway-xlb
spec:
  type: ClusterIP
  selector:
    asm: ingressgateway-xlb
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
